@@ -961,7 +961,15 @@ started these clone on 12th of July, 2019
 [uuk]: Entity-objects contain now an uuid
 [uuk]: player-entity has now an own name and is send to registry
 [uuk]: Entity.draw function is now called in alpha-block-rendering phase
-[uuk]: changing entity position auto-calls now teleport()wwwwwww
+[uuk]: changing entity position auto-calls now teleport()
+[uuk]: SaveFile.upgrade() can get now an to-parameter to indicate to which version to upgrade to
+[uuk]: added base class for player entity for storing the render stuff
+[uuk]: added BaseBoxModel-class for drawing box-models independent from an block-model
+[uuk]: added EntityRenderer-class for handling entity rendering from files
 
 todo: add entities to saves [do not forget to add an data fixer!]
+todo: implement visual to player-entity
+todo: add path-finding-system
+todo: fix bug: player is not rendered when exiting generated chunks when barrier is deactivated
+todo: add loading phases for entities
 
